[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "kmeans_takasuka"
authors = [{name = "Hannah Takasuka", email = "hannah.takasuka@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy", "sys", "pathlib", "typing", "matplotlib"
]

[project.urls]
Home = "https://github.com/hanmochturt/hw3-clustering-takasuka"

[scripts]
15test = "pytest"